corrected spacing for cover and removed border to replicate original

--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,16 @@ img {
 .album {
   width: 100%;
   height: 800px;
-  margin: 20px 0;
-  border: 1px solid black;
+  margin: 20px 0 0 0;
+  -moz-box-shadow: 0 2px 3px black;
+  -webkit-box-shadow: 0 2px 3px black;
+  box-shadow: 0 2px 3px black;
+}
+
+.albumBottom {
+  width: 100%;
+  height: 800px;
+  margin: -42px 0 0 0;
   -moz-box-shadow: 0 2px 3px black;
   -webkit-box-shadow: 0 2px 3px black;
   box-shadow: 0 2px 3px black;
